# rtems

cpukit/libmisc/monitor/: mon-sema.c
cpukit/rtems/include/rtems/rtems/: attr.h  attrimpl.h  sem.h  semimpl.h
cpukit/rtems/src/: clockset.c  semcreate.c  semdelete.c  semflush.c  semobtain.c  semrelease.c  semsetpriority.c  taskwakeafter.c
cpukit/sapi/include/: confdefs.h
cpukit/sapi/include/rtems/: scheduler.h
cpukit/score/: Makefile.am  preinstall.am
cpukit/score/include/rtems/score/: bucket.h  bucketimp.h  bucketimpl.h  dnpp.h  dnppimpl.h  dpcp.h  dpcpimpl.h  mpcp.h  mpcpimpl.h  schedulerDPCPsmp.h  schedulerMPCPsmp.h  schedulersmpimpl.h  thread.h  threaddispatch.h  watchdog.h  watchdogimpl.h
cpukit/score/src/: schedulerDPCPsmp.c  schedulerMPCPsmp.c  threaddispatch.c  watchdog.c  watchdogadjust.c  watchdoginsert.c  watchdogremove.c
testsuites/samples/: Makefile.am  configure.ac
testsuites/samples/base_sp/: init.c
testsuites/samples/ticker/: init.c  tasks.c
testsuites/smptests/: Makefile.am  configure.ac
testsuites/smptests/smpdnpp01/: init.c
testsuites/smptests/smpdnpp02/: Makefile.am  init.c
testsuites/smptests/smpdpcp01/: Makefile.am  init.c  smpdpcp01.doc
testsuites/smptests/smpdpcp02/: Makefile.am  init.c
testsuites/smptests/smpmpcp01/: init.c
testsuites/smptests/smpmpcp02/: Makefile.am  init.c  smpmpcp02.doc
testsuites/sptests/: Makefile.am  configure.ac
testsuites/sptests/sp01/: task1.c
testsuites/sptests/sp78/: Makefile.am  init.c  sp78.doc  sp78.scn
testsuites/testsuites/: Makefile.am  configure.ac
testsuites/testsuites/smptests/: Makefile.am  configure.ac
testsuites/testsuites/smptests/smpdnpp01/: Makefile.am  init.c
testsuites/testsuites/smptests/smpdpcp01/: init.c
testsuites/testsuites/smptests/smpmpcp01/: Makefile.am  init.c
testsuites/testsuites/smptests/smpmpcp02/: init.c
testsuites/testsuites/smptests/smpmrsp01/: init.c
